Working on Layout

--- a/about.html
+++ b/about.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <header>
+    <h1>Gabby's Blog</h1>
+    <h2>About</h2> 
+    <div class="logo">
+        <img src="My Photo.JPG" alt="Photo of Me">
+    </div>
+   </header>
+   <section>
+    <article>
+        <h2>Gabrielle Berger</h2>
+        <p>Hi, my name is Gabrielle (Gabby) Berger. I am currently a student at Michigan State University studying Information Science and Horticulture. I am graduation Decmeber of 2024 and I am looking for different graduate school opportunities. I would like to study plant phenotyping. </p>
+    </article>
+   </section>
+   
 </body>
 </html>
