Added contact and about

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Gabby's Weblog</h1>
         <div class="logo">
-            <img scr="image/logo.png" alt="Personal Photo">
+            <img scr="My Photo.JPG" alt="Photo of Me">
         </div>
 
     </header>
@@ -20,8 +20,6 @@
         <ul>
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
-            <li>Blog</li>
-            <li>About</li>
         </ul>
     </nav>
     <section>
