--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <header>
         <h1>Gabby's Weblog</h1>
+        <img scr="My Photo.JPG" alt="Photo of Me">
         <div class="logo">
-            <img scr="My Photo.JPG" alt="Photo of Me">
+
         </div>
 
     </header>
@@ -28,12 +29,14 @@
             <h2>Publication Date: 10/13/2024 by Gabrielle Berger</h2>
             <p>This week I was lucky enough to attend the International Plant Phenotyping Conference put on by the International Plant Phenotyping Network in Lincoln, Nebraska. This conference gathered hundreds of specialists all around the world to discuss the most innovative ways to measure and influence the breeding/changing of crops in all ever changing climates. The plant phenotyping field has become increasingly more important to study to ensure a stable food supply for all living creatures on earth. It works with crop improvement, crop climate resilience, resource efficiency, and genomic selection. All of these combined aspects are becoming crucial to understand to waste less resources while providing the best crops possible. 
             I specifically attended the conference to learn more about the field and gather ideas for future studies. I graduate with my bachelors in just a few short weeks. I would like to further my studies by focusing on plant phenotyping in graduate school. Attending this conference allowed me to connect with people actually researching and working in this field. I heard from many individuals on cutting edge procedures and innovations used to further research on improving crop growth. I was also able to meet with individuals looking for students to become grad students at their universities and gather ideas on where I wanted to go for graduate school. I have a lot of decisions to make in the near future but this conference was a pleasure to attend and inspired me to explore more options for future research. </p>
+            <img scr="IPPN.jpg" alt="Photo of the Conference">
         </article>
         <article>
             <h2>Spidercam Technology</h2>
             <h2>Publication Date: 10/13/2024 by Gabrielle Berger</h2>
             <p>While attending the International Plant Phenotyping Symposium I was able to visit a demonstration at the Eastern Nebraska Research, Extension and Education Center or ENREEC for their Spidercam technology. The entire ENREEC facility showed a cyclical demonstration of crop growth to utilizing the crops grown on property for livestock research nutrition also on the campus to then using the fertilizer from the animals to ensure nutrient rich soil for the next years crop growth. I wanted to focus on the Spidercam which is an amazing piece of innovative technology that is a suspended cameras that collects many advance images and data points to get a better understanding on crop growth and how different types of crops breed. 
             The Spidercam is a phenotyping tool that suspends many different cameras such as RBG, hyperspectral, and infrared cameras that are used to measure abiotic and biotic stress responses in the crops planted in the study plot, in hopes of discovering and testing different varieties of crops to increase the yield of the crop, increase resistance to diseases or pests, and to increase the amount of input the crops need such as water or nutrients. This tool has proven to be an extremely useful tool for measuring these aspects and I cant wait to hear more about its discoveries.</p>
+            <img scr="Spidercam.jpg" alt="Spidercam">
         </article>
     </section>
 </body>
