--- a/about.html
+++ b/about.html
@@ -17,6 +17,16 @@
     <article>
         <h2>Gabrielle Berger</h2>
         <p>Hi, my name is Gabrielle (Gabby) Berger. I am currently a student at Michigan State University studying Information Science and Horticulture. I am graduation Decmeber of 2024 and I am looking for different graduate school opportunities. I would like to study plant phenotyping. </p>
+        <p>Favorite Hobbies:</p>
+        <nav>
+            <ul>
+                <li>1.Floriculture</li>
+                <li>2.Swimming</li>
+                <li>3.Nature</li>
+                <li>4.Photography</li>
+                <li>5.Gaming</li>
+            </ul>
+        </nav>
     </article>
    </section>
    
