--- a/about.html
+++ b/about.html
@@ -20,11 +20,11 @@
         <p>Favorite Hobbies:</p>
         <nav>
             <ul>
-                <li>1.Floriculture</li>
-                <li>2.Swimming</li>
-                <li>3.Nature</li>
-                <li>4.Photography</li>
-                <li>5.Gaming</li>
+                <li>Floriculture</li>
+                <li>Swimming</li>
+                <li>Nature</li>
+                <li>Photography</li>
+                <li>Gaming</li>
             </ul>
         </nav>
     </article>
