--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="about.html">About</a>
 
     </nav>
-    <section>
+    <div>
         <article>
             <h2>International Plant Phenotyping Symposium</h2>
             <h2>Publication Date: 10/13/2024 by Gabrielle Berger</h2>
@@ -39,6 +39,6 @@
                 <img src="Spidercam.jpg" alt="Photo of Spidercam Tech">
             </div>
         </article>
-    </section>
+    </div>
 </body>
 </html>
