--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
    <section>
     <article>
         <h2>Gabrielle Berger</h2>
-        <p>Hi, my name is Gabrielle (Gabby) Berger. I am currently a student at Michigan State University studying Information Science and Horticulture. I am graduation Decmeber of 2024 and I am looking for different graduate school opportunities. I would like to study plant phenotyping. </p>
+        <p>Hi, my name is Gabrielle (Gabby) Berger. I am currently a student at Michigan State University studying Information Science and Horticulture. I am graduating Decmeber of 2024 and I am looking for different graduate school opportunities. I would like to study plant phenotyping. </p>
         <p>Favorite Hobbies:</p>
-        <nav>
+        <nav>s
             <ul>
                 <li>Floriculture</li>
                 <li>Swimming</li>
