Fixing formatting errors

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,17 @@
     <title>Contact</title>
 </head>
 <body>
-    <header>Contact Info</header>
+    <header>
+        <h1>Gabby's Weblog</h1>
+        <p>Exploring My Future</p>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+    </nav>
+    </header>
     
 </body>
 </html>
