--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact - Gabby Berger</title>
 </head>
 <body>
     <header>
@@ -17,6 +17,28 @@
             </ul>
     </nav>
     </header>
-    
+    <section>
+        <form>
+            <label>Name:
+                <input type ="text">
+            </label>
+            <label>Email Address:
+                <input type ="email">
+            </label>
+ 
+            <label>Comments:
+                <input type ="text">
+            </label>            
+            <label>
+            <label for="contact_reason">Reason for Contact:</label>
+            <select id="contact_reason" name="contact_reason">
+                <option value="saying_hi">Saying Hi</option>
+                <option value="looking_for_contractor">Looking for a Contractor</option>
+                <option value="interested_in_interview">Interested in an Interview</option>
+            </select>
+            <button type="submit">Submit</button>
+        </label>
+        </form>
+    </section>    
 </body>
 </html>
