Working on Contact Page Validate

--- a/about.html
+++ b/about.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>About - Gabby Berger</title>
 </head>
 <body>
    <header>
-    <h1>Gabby's Blog</h1>
-    <h2>About</h2> 
-    <div class="logo">
-        <img src="My Photo.JPG" alt="Photo of Me">
-    </div>
-   </header>
+    <h1>Gabby's Weblog</h1>
+    <p>Exploring My Future</p>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+</nav>
+</header>
+<p><img alt="Photo of Me" src="My Photo.JPG"/></p>
    <section>
     <article>
         <h2>Gabrielle Berger</h2>
