--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             </ul>
     </nav>
     </header>
-    <section>
+    <section><h2>Contact Me</h2>
         <form>
             <label>Name:
                 <input type ="text">
@@ -36,7 +36,6 @@
                 <option value="interested_in_interview">Interested in an Interview</option>
             </select>
             <button type="submit">Submit</button>
-        </label>
         </form>
     </section>    
 </body>
