--- a/about.html
+++ b/about.html
@@ -17,13 +17,12 @@
         </ul>
 </nav>
 </header>
-<p><img alt="Photo of Me" src="My Photo.JPG"/></p>
-   <section>
+<p><img alt="Photo of Me" src="MyPhoto.JPG"></p>
+   <section><h2>Gabrielle Berger</h2>
     <article>
-        <h2>Gabrielle Berger</h2>
         <p>Hi, my name is Gabrielle (Gabby) Berger. I am currently a student at Michigan State University studying Information Science and Horticulture. I am graduating Decmeber of 2024 and I am looking for different graduate school opportunities. I would like to study plant phenotyping. </p>
         <p>Favorite Hobbies:</p>
-        <nav>s
+        <nav>
             <ul>
                 <li>Floriculture</li>
                 <li>Swimming</li>
