--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="style.css">
     <title>Contact - Gabby Berger</title>
 </head>
+<section id="Newsletter">
+    <form>
+        <label>Sign up for our newsletter:
+            <input type ="text">
+        </label>
+        <button>Subscribe</button>
+    </form>
+</section>
 <body>
     <header>
         <h1>Gabby's Weblog</h1>
