Trying to add sticky bar and changed photos

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </ul>
 </nav>
 </header>
-<p><img alt="Photo of Me" src="MyPhoto.JPG"></p>
+<img class="profile" src="Images/MyPhoto.jpg" alt="Profile Picture">
    <section><h2>About Me</h2>
     <article>
         <h2>Gabrielle Berger</h2>
