Changes to style in mainly index file

--- a/about.html
+++ b/about.html
@@ -9,30 +9,36 @@
 <body>
    <header>
     <h1>Gabby's Weblog</h1>
-    <p>Exploring My Future</p>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
-</nav>
+    <p>Exploring My Future - About Me</p>
 </header>
+
+<article class="navigation">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
+  </article>
+  
 <img class="profile" src="Images/MyPhoto.jpg" alt="Profile Picture">
-   <section><h2>About Me</h2>
+   <section>
     <article>
         <h2>Gabrielle Berger</h2>
         <p>Hi, my name is Gabrielle (Gabby) Berger. I am currently a student at Michigan State University studying Information Science and Horticulture. I am graduating Decmeber of 2024 and I am looking for different graduate school opportunities. I would like to study plant phenotyping. </p>
+
+
+    </article>
+    <article>
+    <nav>
         <p>Favorite Hobbies:</p>
-        <nav>
-            <ul>
-                <li>Floriculture</li>
-                <li>Swimming</li>
-                <li>Nature</li>
-                <li>Photography</li>
-                <li>Gaming</li>
-            </ul>
-        </nav>
+        <ul>
+            <li>Floriculture</li>
+            <li>Swimming</li>
+            <li>Nature</li>
+            <li>Photography</li>
+            <li>Gaming</li>
+        </ul>
+    </nav>
     </article>
    </section>
    
