--- a/contact.html
+++ b/contact.html
@@ -18,14 +18,16 @@
     <header>
         <h1>Gabby's Weblog</h1>
         <p>Exploring My Future</p>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-    </nav>
     </header>
+
+    <article class="navigation">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+      </article>
+      
     <section><h2>Contact Me</h2>
         <form>
             <label>Name:
