Working on about page css

--- a/about.html
+++ b/about.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="style.css">
     <title>About - Gabby Berger</title>
 </head>
+<section id="Newsletter">
+    <form>
+        <label>Sign up for our newsletter:
+            <input type ="text">
+        </label>
+        <button>Subscribe</button>
+    </form>
+</section>
 <body>
    <header>
     <h1>Gabby's Weblog</h1>
@@ -19,12 +27,12 @@
         <li><a href="about.html">About</a></li>
     </ul>
   </article>
-  
+
 <img class="profile" src="Images/MyPhoto.jpg" alt="Profile Picture">
    <section>
     <article>
         <h2>Gabrielle Berger</h2>
-        <p>Hi, my name is Gabrielle (Gabby) Berger. I am currently a student at Michigan State University studying Information Science and Horticulture. I am graduating Decmeber of 2024 and I am looking for different graduate school opportunities. I would like to study plant phenotyping. </p>
+        <p>Hi, my name is Gabrielle (Gabby) Berger. I am currently a student at Michigan State University studying Information Science and Horticulture. I am graduating Decemeber of 2024 and I am looking for different graduate school opportunities, and would love any advice you have. I would like to study horticulture and end up specializing in plant phenotyping. </p>
 
 
     </article>
