--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,9 @@
             <li><a href="about.html">About</a></li>
         </ul>
       </article>
-      
-    <section><h2>Contact Me</h2>
+
+    <section id="Contact">
+        <h2>Contact Me</h2>
         <form>
             <label>Name:
                 <input type ="text">
