Sticky Tab Works!!

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
    <section>
     <article>
         <h2>Gabrielle Berger</h2>
-        <p>Hi, my name is Gabrielle (Gabby) Berger. I am currently a student at Michigan State University studying Information Science and Horticulture. I am graduating Decemeber of 2024 and I am looking for different graduate school opportunities, and would love any advice you have. I would like to study horticulture and end up specializing in plant phenotyping. </p>
+        <p>Hi, my name is Gabrielle (Gabby) Berger. I am currently a student at Michigan State University studying Information Science and Horticulture. I am graduating Decemeber of 2024. I am looking for different graduate school opportunities, and would love any advice you have. I would like to study horticulture and end up specializing in plant phenotyping to combine my interests of coding and technology with my love of plants. I would like to make a difference by studying how climate change impacts plant growth and develop crop varities that are more resilient to the stresses caused by climate change such as heat and drought.</p>
 
 
     </article>
