Finishing up nav

--- a/about.html
+++ b/about.html
@@ -13,6 +13,15 @@
         </label>
         <button>Subscribe</button>
     </form>
+
+    <article class="navigation">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+      </article>
+
 </section>
 <body>
    <header>
@@ -20,13 +29,7 @@
     <p>Exploring My Future - About Me</p>
 </header>
 
-<article class="navigation">
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul>
-  </article>
+
 
 <img class="profile" src="Images/MyPhoto.jpg" alt="Profile Picture">
    <section>
@@ -37,7 +40,7 @@
 
     </article>
     <article>
-    <nav>
+    <nav id="hobbies">
         <p>Favorite Hobbies:</p>
         <ul>
             <li>Floriculture</li>
