--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Home Page</title>
 </head>
-<section id="Newsletter">
+<div id="Newsletter">
   <div>
     <form>
         <label>Sign up for our newsletter:
@@ -27,7 +27,7 @@
       </ul>
     </article>
 
-</section>
+  </div>
 <body>
     <header>
         <h1>Gabby's Weblog</h1>
