Validate contact names to sections

--- a/contact.html
+++ b/contact.html
@@ -6,21 +6,24 @@
     <link rel="stylesheet" href="style.css">
     <title>Contact - Gabby Berger</title>
 </head>
-<section id="Newsletter">
-    <form>
-        <label>Sign up for our newsletter:
-            <input type ="text">
-        </label>
-        <button>Subscribe</button>
-    </form>
+<div id="Newsletter">
+    <div>
+      <form>
+          <label>Sign up for our newsletter:
+              <input type ="text">
+          </label>
+          <button>Subscribe</button>
+      </form>
+    </div>
 
-    <article class="navigation">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
-      </article>
+    <article class ="navigation">
+      <h3>Navigation</h3>
+      <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+      </ul>
+    </article>
 
 </section>
 <body>
