VAlidate and rename sections in contact page

--- a/contact.html
+++ b/contact.html
@@ -15,17 +15,18 @@
           <button>Subscribe</button>
       </form>
     </div>
+  
+      <article class ="navigation">
+        <h3>Navigation</h3>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+      </article>
+  
+</div>
 
-    <article class ="navigation">
-      <h3>Navigation</h3>
-      <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="about.html">About</a></li>
-      </ul>
-    </article>
-
-</section>
 <body>
     <header>
         <h1>Gabby's Weblog</h1>
