Fixed nav bar sticky and renamed sections in about

--- a/about.html
+++ b/about.html
@@ -6,24 +6,31 @@
     <link rel="stylesheet" href="style.css">
     <title>About - Gabby Berger</title>
 </head>
-<section id="Newsletter">
-    <form>
-        <label>Sign up for our newsletter:
-            <input type ="text">
-        </label>
-        <button>Subscribe</button>
-    </form>
 
-    <article class="navigation">
+</section>
+<body>
+
+    <div id="Newsletter">
+        <div>
+          <form>
+              <label>Sign up for our newsletter:
+                  <input type ="text">
+              </label>
+              <button>Subscribe</button>
+          </form>
+        </div>
+      
+
+    </div>
+    <article class ="navigation">
+        <h3>Navigation</h3>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
       </article>
-
-</section>
-<body>
+  
    <header>
     <h1>Gabby's Weblog</h1>
     <p>Exploring My Future - About Me</p>
